# fuzzer-proxy

./: CHANGELOG  README  README.md  run.py
ccode/: .mmap_id  build.sh  run
ccode/.bak/: afl-proxy.c  afl-proxy3_found_shmid.c  fuzzer.h
ccode/AFL/AFLplusplus-4.06c/frida_mode/src/: shm.c
ccode/afl_proxy/: CMakeLists.txt  afl-proxy.c  fuzzer.h
ccode/afl_proxy/module/: CMakeLists.txt  module.c
ccode/afl_proxy/module/.tes/: a.out  build.sh  portable_shmatku.c  shmatku.c
ccode/afl_proxy/module/android_ashmem/: shmem.c
ccode/afl_proxy/module/android_ashmem/.tmp/: CMakeLists.txt  Makefile  config.sh
examples/: .build.sh  target.c
examples/.crash/: data.txt
examples/android/: README
examples/android/gadget/: .build.sh  .mmap_id  CMakeLists.txt  target.c
examples/android/gadget/lib/: .build.sh  .injectLib.py
examples/android/libandroid/: .build.sh  CMakeLists.txt  afl.js  run.sh
examples/android/libandroid/lib/: README
examples/android/pidandroid/: CMakeLists.txt  config.sh  run-afl.sh  target.c
examples/lib/: .build.sh  libvuln.c
js/: harness.js
